--- a/index.html
+++ b/index.html
@@ -236,12 +236,14 @@ const [receipt, setReceipt] = useState(null);
               <button
   onClick={() => setCurrentPage('receipts')}
   className={`w-full flex items-center gap-3 px-4 py-3 rounded-lg mb-2 ${
-    currentPage === 'receipts' ? 'bg-green-500' : 'text-gray-400 hover:bg-gray-700'
+    currentPage === 'receipts'
+      ? 'bg-green-500'
+      : 'text-gray-400 hover:bg-gray-700'
   }`}
 >
   <Icon name="file-text" size={20} />
   {sidebarOpen && <span>Receipts</span>}
-</button>            </nav>
+</button>          </nav>
             <div className="p-4 space-y-2">
               <button onClick={() => setCurrentPage('addbet')} className="w-full bg-green-500 hover:bg-green-600 text-white rounded-lg py-3 px-4 flex items-center justify-center gap-2"><Icon name="plus" size={20} />{sidebarOpen && <span>Add Bet</span>}</button>
               <button onClick={() => setCurrentPage('verify')} className="w-full bg-gray-700 hover:bg-gray-600 text-white rounded-lg py-3 px-4 flex items-center justify-center gap-2"><Icon name="shield" size={20} />{sidebarOpen && <span>Verify</span>}</button>
@@ -362,7 +364,53 @@ const [receipt, setReceipt] = useState(null);
                 </div>
               )}
             </div>
-            <div className="md:hidden fixed bottom-0 left-0 right-0 bg-gray-800 border-t border-gray-700 flex justify-around py-3 z-20">
+              {currentPage === 'receipts' && (
+  <div className="space-y-6 max-w-3xl">
+    <h2 className="text-3xl font-bold">Verified Receipts</h2>
+
+    {receipts.length === 0 ? (
+      <p className="text-gray-400">No verified receipts yet.</p>
+    ) : (
+      <div className="space-y-4">
+        {receipts.map((r, i) => (
+          <div key={i} className="bg-gray-800 rounded-lg p-5 space-y-3">
+            <div className="flex justify-between items-center">
+              <h3 className="font-semibold text-lg">{r.game}</h3>
+              <span className="text-green-400 font-bold">
+                {r.confidence}% Verified
+              </span>
+            </div>
+
+            <p className="text-gray-400">
+              Amount: ${r.amount} • Odds: {r.odds}
+            </p>
+
+            <p className="text-sm text-gray-500">
+              Sportsbook: {r.sportsbook}
+            </p>
+
+            {r.image && (
+              <img
+                src={r.image}
+                alt="Receipt"
+                className="rounded-md mt-2 max-h-48"
+              />
+            )}
+
+            <div className="flex items-center gap-2 text-sm">
+              <span className="bg-green-500/20 text-green-300 px-2 py-1 rounded">
+                Verified
+              </span>
+              <span className="text-gray-500">
+                {new Date(r.timestamp).toLocaleString()}
+              </span>
+            </div>
+          </div>
+        ))}
+      </div>
+    )}
+  </div>
+      <div className="md:hidden fixed bottom-0 left-0 right-0 bg-gray-800 border-t border-gray-700 flex justify-around py-3 z-20">
               <button onClick={()=>setCurrentPage('dashboard')} className={`flex flex-col items-center gap-1 px-4 py-2 ${currentPage==='dashboard'?'text-green-500':'text-gray-400'}`}><Icon name="home" size={22}/><span className="text-xs">Home</span></button>
               <button onClick={()=>setCurrentPage('bets')} className={`flex flex-col items-center gap-1 px-4 py-2 ${currentPage==='bets'?'text-green-500':'text-gray-400'}`}><Icon name="bar-chart-3" size={22}/><span className="text-xs">Bets</span></button>
               <button onClick={()=>setCurrentPage('leaderboard')} className={`flex flex-col items-center gap-1 px-4 py-2 ${currentPage==='leaderboard'?'text-green-500':'text-gray-400'}`}><Icon name="users" size={22}/><span className="text-xs">Leaderboard</span></button>
