--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ function App() {
     </div>
   );
 }
+  </script>
     <script type="text/babel">
 const root = ReactDOM.createRoot(document.getElementById("app"));
 root.render(<App />);
